White space (well not exactly white but w/e) fixes, fix margins on blog and portfolio

--- a/less/blog.less
+++ b/less/blog.less
@@ -17,7 +17,6 @@ a.link {
     width: calc(~"100% - 0px");
     #posts {
         width: calc(~"70%");
-        margin: 40px;
         #breadcrumbs {
             position: relative;
             height: 40px;
